--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	// openfeign
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+	// feign 이 xml 처리
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
