chore: application.yml파일 저장 경로 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,8 +87,8 @@ jobs:
             EOF
             
             # application.yml 파일을 컨테이너가 접근 가능한 위치에 생성
-            mkdir -p ~/config
-            cat > ~/config/application-auth.yml << 'EOL'
+            mkdir -p ~/config/auth
+            cat > ~/config/auth/application.yml << 'EOL'
             ${{ secrets.APPLICATION_YML }}
             EOL
             
